# ChangeLog for games-roguelike/scourge
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-roguelike/scourge/ChangeLog,v 1.6 2004/11/20 08:43:29 mr_bones_ Exp $

  20 Nov 2004; Michael Sterrett <mr_bones_@gentoo.org> scourge-0.6.ebuild:
  update deps (bug #68666)

*scourge-0.6 (15 Oct 2004)

  15 Oct 2004; Michael Sterrett <mr_bones_@gentoo.org> +scourge-0.6.ebuild:
  version bump (bug #66806) - ebuild submitted by Jamis Buck

  18 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> scourge-0.1.ebuild:
  don't RDEPEND on sed

  15 Mar 2004; David Holm <dholm@gentoo.org> scourge-0.1.ebuild:
  Added to ~ppc.

*scourge-0.1 (26 Jan 2004)

  26 Jan 2004; Michael Sterrett <mr_bones_@gentoo.org> scourge-0.1.ebuild:
  initial commit (bug 39316)
