@@ -1,6 +1,8 @@
 MD5 caaa05ff796be8cb565101ba8a6f96ff scourge-0.1.ebuild 966
 MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
 MD5 2fac02ebddbe58f689038d6a393527de ChangeLog 806
+MD5 9bfb298f48c0336c23ba6299da20390c scourge-0.7.ebuild 1152
 MD5 9bfb298f48c0336c23ba6299da20390c scourge-0.6.ebuild 1152
 MD5 2feb34e8daadb3f37513752485694576 files/digest-scourge-0.1 64
 MD5 078a5fb38a1206623b65412525e7e55e files/digest-scourge-0.6 64
+MD5 c3d6a820207b69c5fed27cb095e5a5c4 files/digest-scourge-0.7 64
