@@ -1,6 +1,11 @@
 # ChangeLog for games-roguelike/scourge
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-roguelike/scourge/ChangeLog,v 1.6 2004/11/20 08:43:29 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-roguelike/scourge/ChangeLog,v 1.7 2004/11/21 07:57:28 mr_bones_ Exp $
+
+*scourge-0.7 (20 Nov 2004)
+
+  20 Nov 2004; Michael Sterrett <mr_bones_@gentoo.org> +scourge-0.7.ebuild:
+  version bump
 
   20 Nov 2004; Michael Sterrett <mr_bones_@gentoo.org> scourge-0.6.ebuild:
   update deps (bug #68666)
